--- a/_config.yml
+++ b/_config.yml
@@ -18,22 +18,24 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Sander de Bruijn - Dev Blog
+title: Sander de Bruijn
 email: sander606@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Documenting my learnings regarding web development, specifically Javascript, React, HTML/CSS and web-design.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://www.sanderdev.nl" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  sanderdebr
 
 # Build settings
-theme: minima
+# theme: minima
+theme: jekyll-theme-hydeout
+paginate: 20
 
 plugins:
   - jekyll-feed
+  - jekyll-gist
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default.
